3.4
---
- Removed unused "Global-money-multiplier" option

3.3
---
- Fixed a problem in MineChart (MineStatus) API support caused by rebrand
- MineChart support: Added "COLLECTED-MONEY" Graph
- Updated to 1.11

3.2
---
- "Lose Money" option to player
- MineStatus support: MOB-KILLS
- Minor fixes

3.17
---
- Modified permission system
- Added "km" alias for killermoney command
- Fixed KillerMoney command permissions
- Removed unused random number function

3.16
---
- Added Custom command chance settings
- Added Dutch translation

3.15
---
- Updated to 1.10

3.14
---
- Updated to 1.9
- Updated dependencies
- Fixed deprecated methods
- Integrated cz and fr locale

3.13
---
- Fixed suicide NPE

3.12
---
- Added When player fell out of world, then last damager earn money
- Fixed metrics lib with other bukkit lib
- Fixed decimal formating
- (API) Fixed negative money in MoneyLoss Event
- (API) Fixed perm money multiplier in MoneyReward Event

3.11
---
- Added decimal places
- Added function disable in creative mode
- Added function disable on global world settings
- Changed the global-multiplier path in config.yml
- Added getDecimalPlaces() into API
- Added isCreativeModeFunctionsDisabled() into API
- Added getGlobalDisabledWorlds() into API

3.1
---
- Added API class

- Fixed CashTransfer money bug
- Fixed money bugs on x < v1.7.10

3.0
---
- Initial release